--- a/pytorch-cuda/v1.10.1/Dockerfile
+++ b/pytorch-cuda/v1.10.1/Dockerfile
@@ -1,35 +1,25 @@
-FROM nvidia/cuda:11.3.0-cudnn8-devel-ubi8
+FROM hpcaitech/cuda-conda:11.3
 
 # Make RUN commands use `bash --login`:
 SHELL ["/bin/bash", "--login", "-c"]
 
-# install tools
-RUN yum install -y wget vim git python38
-
-# install conda
-RUN cd /opt \
-  && wget https://repo.anaconda.com/miniconda/Miniconda3-latest-Linux-x86_64.sh \
-  && bash Miniconda3-latest-Linux-x86_64.sh -b -p /opt/conda \
-  && rm Miniconda3-latest-Linux-x86_64.sh
+# create virtual env
+RUN  source /opt/conda/bin/activate base \
+ && conda create -n pytorch python=3.8
 
 # install pytorch
-# install torch and apex
-RUN source /opt/conda/bin/activate base \
+RUN source /opt/conda/bin/activate pytorch \
   && conda install -y pip \
   && conda install pytorch==1.10.1 torchvision==0.11.2 torchaudio==0.10.1 cudatoolkit=11.3 -c pytorch -c conda-forge
 
 # install apex
 RUN cd /root \
-  && source /opt/conda/bin/activate base \
+  && source /opt/conda/bin/activate pytorch \
   && git clone https://github.com/NVIDIA/apex \
   && cd apex \
+  && pip install packaging \
   && pip install -v --disable-pip-version-check --no-cache-dir --global-option="--cpp_ext" --global-option="--cuda_ext" ./ \
   && cd .. \
   && rm -rf ./apex
 
-RUN mkdir /workspace
-
-ENV PATH "/opt/conda/bin:$PATH"
-ENV CUDA_HOME "/usr/local/cuda"
-WORKDIR /workspace
-
+ENV PATH "/opt/conda/envs/pytorch/bin:$PATH"
