--- a/pytorch-cuda/v1.12.0/Dockerfile
+++ b/pytorch-cuda/v1.12.0/Dockerfile
@@ -17,14 +17,16 @@ RUN cd /root \
   && source /opt/conda/bin/activate pytorch \
   && git clone https://github.com/NVIDIA/apex \
   && cd apex \
-  && git reset 2958e06e094146798ae42a748a77a509fd4695a0 \
   && pip install packaging \
   && pip install -v --disable-pip-version-check --no-cache-dir --no-build-isolation --config-settings "--build-option=--cpp_ext" --config-settings "--build-option=--cuda_ext" ./ \
   && cd .. \
   && rm -rf ./apex
 
 # install xformer
-RUN source /opt/conda/bin/activate pytorch \ 
-  && pip install -v -U git+https://github.com/facebookresearch/xformers.git@main#egg=xformers
+RUN source /opt/conda/bin/activate pytorch \
+  && pip install ninja \
+  && pip install -v git+https://github.com/facebookresearch/xformers.git@82254f4b0d9c625f7efa8d6671f58144e441901d
 
 ENV PATH "/opt/conda/envs/pytorch/bin:$PATH"
+
+RUN conda init bash && echo "conda activate pytorch" >> /root/.bashrc
