--- a/pytorch-cuda/v2.0.0/Dockerfile
+++ b/pytorch-cuda/v2.0.0/Dockerfile
@@ -17,9 +17,15 @@ RUN cd /root \
   && source /opt/conda/bin/activate pytorch \
   && git clone https://github.com/NVIDIA/apex \
   && cd apex \
-  && pip install packaging \
-  && pip install -v --disable-pip-version-check --no-cache-dir --global-option="--cpp_ext" --global-option="--cuda_ext" ./ \
+  && pip install packaging ninja \
+  && pip install -v --disable-pip-version-check --no-cache-dir --no-build-isolation --config-settings "--build-option=--cpp_ext" --config-settings "--build-option=--cuda_ext" ./ \
   && cd .. \
   && rm -rf ./apex
 
+# install xformer
+RUN source /opt/conda/bin/activate pytorch \
+    && pip install xformers==0.0.19
+
 ENV PATH "/opt/conda/envs/pytorch/bin:$PATH"
+
+RUN conda init bash && echo "conda activate pytorch" >> /root/.bashrc
