--- a/pytorch-npu/2.1.0a2/Dockerfile
+++ b/pytorch-npu/2.1.0a2/Dockerfile
@@ -1,4 +1,4 @@
-FROM hpcaitech/ascend-toolkit:7.0.rc1-ubuntu22.04-aarch64
+FROM hpcaitech/ascend-toolkit:7.0.0.alpha002-ubuntu22.04-aarch64
 
 # Make RUN commands use `bash --login`:
 SHELL ["/bin/bash", "--login", "-c"]
@@ -15,12 +15,20 @@ RUN apt update -y && \
 
 # install pytorch
 RUN pip install -U pip && \
-  pip install numpy decorator sympy cffi pyyaml pathlib2 protobuf==3.19.0 attrs attr scipy requests psutil absl-py torch==2.1.0 torch-npu==2.1.0rc1 torchvision==0.16.0 torchaudio==2.1.0 packaging ninja cloudpickle synr==0.5.0 tornado setuptools==65.7.0 && \
+  pip install numpy decorator sympy cffi pyyaml pathlib2 protobuf==3.19.0 attrs attr scipy requests psutil absl-py torch==2.1.0 torchvision==0.16.0 torchaudio==2.1.0 packaging ninja cloudpickle synr==0.5.0 tornado setuptools==65.7.0 && \
+  git clone https://gitee.com/ascend/pytorch.git -b v2.1.0 --depth 1 && \
+  cd pytorch && \
+  bash ci/build.sh --python=3.10 && \
+  pip install dist/torch_npu-2.1.0*.whl && \
+  cd /root && \
+  rm -rf pytorch && \
   rm -rf /root/.cache/pip
 
+
 # install apex
+# hack apex install
 RUN ln -s /usr/local/lib/python3.10/dist-packages /usr/lib/python3.10/site-packages && \
-  git clone -b master https://gitee.com/ascend/apex.git && \
+ git clone -b master https://gitee.com/ascend/apex.git && \
   cd apex/ && \
   bash scripts/build.sh --python=3.10 && \
   cd apex/dist/ && \
